# routes/index.js
@@ -1,9 +1,13 @@
 const router = require('express').Router();
 const passport = require('passport');
 
-router.get('/login', passport.authenticate('github'));
+router.get('/login', (req, res) => {
+    //#swagger.tags=['Authentication']
+  passport.authenticate('github')(req, res);
+});
 
 router.get('/logout', (req, res, next) => {
+     //#swagger.tags=['Authentication']
   req.logout((err) => {          
     if (err) return next(err);
     req.session.destroy(() => res.redirect('/'));
